--- a/index.html
+++ b/index.html
@@ -1,7 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio of a Junior Developer showcasing projects with WebGL builds and download links.">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1>My Portfolio</h1>
+        <p>Welcome! Here are some of my projects.</p>
+    </header>
+
+    <main>
+        <section class="projects">
+            <!-- Project 1 -->
+            <div class="project-card">
+                <h2>Project 1: WebGL Game</h2>
+                <p>A 3D game made with Unity and WebGL.</p>
+                <div class="project-link">
+                    <a href="https://mywebglgame.com" target="_blank" class="button">Play WebGL Game</a>
+                </div>
+            </div>
+
+            <!-- Project 2 -->
+            <div class="project-card">
+                <h2>Project 2: Desktop App</h2>
+                <p>A command lign application that allows you to train a home made neural network to play Connect 4. How to test quickly : Create Joueur Joueur, Create Reseau Reseau, Create MonteCarlo MC, Train Reseau MonteCarlo 100, Play Joueur Reseau. This will let you play against a neural network which had 100 games of training against a Monte carlo algorithm</p>
+                <p>The neural network can see 1 move in the future which overrides it's decisions, the rest of it's strategy is pure Overfitted non-linear mess</p>
+                <p>The architecture is a simple forward propagation model with a gradient descent</p>
+                <div class="project-link">
+                    <a href="https://github.com/ugo-hubertalm/Projet-INFO/releases/download/C4/main.exe" target="_blank" class="button">Download App</a>
+                </div>
+            </div>
+
+            <!-- Add more projects as needed -->
+        </section>
+    </main>
+
+    <footer>
+        <a href="https://github.com/Karleuh" target="_blank">Visit my GitHub</a>
+    </footer>
 </body>
 </html>
