--- a/index.html
+++ b/index.html
@@ -4,30 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of a Junior Developer showcasing projects with WebGL builds and download links.">
-    <title>My Portfolio</title>
+    <title>Karel Jonquais</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>My Portfolio</h1>
-        <p>Welcome! Here are some of my projects.</p>
+        <h1>Karel Jonquais</h1>
     </header>
 
     <main>
         <section class="projects">
             <!-- Project 1 -->
             <div class="project-card">
-                <h2>Project 1: WebGL Game</h2>
-                <p>A 3D game made with Unity and WebGL.</p>
+                <h2>CrownRush</h2>
+                <p>A 3D game made with Unity. It's a barely playable RTS with a "capture the flag" twist to it.</p>
+                <p>Build your army with the gold you're given (you have to put units on the battlefield and then click the start button), and triumph by bringing the Crown back to the starting zone.</p>
+                <p>Left click to select your troops, right click to command them, space bar to use the signature ability of a selected unit </p>
+                <div class="project-link">
+                    <a href="https://karleuh.github.io/RTSCTFOMG/" target="_blank" class="button">Play WebGL Game</a>
+                </div>
+            </div>
+            <!-- Project 1bis -->
+            <div class="project-card">
+                <h2>Skar</h2>
+                <p>A 3D game made with Unity. Drive around and try to beat your own time in this unfinished car/driving game</p>
+                <p>Current record holds at 34s for the 3 lap race</p>
+                <p>ZQSD to move, Space bar to brake, Shift to use turbo</p>
                 <div class="project-link">
                     <a href="https://mywebglgame.com" target="_blank" class="button">Play WebGL Game</a>
                 </div>
             </div>
+            <!-- Project 1ter -->
+            <div class="project-card">
+                <h2>SCHMUP</h2>
+                <p>A 2D game made with Unity. A SCHMUP where you fly above the adriatic aside clouds that look like dirty tissues, shooting up air pirates</p>
+                <p>ZQSD to move, Space bar to shoot, tab to change weapon type</p>
+                <div class="project-link">
+                    <a href="https://mywebglgame.com" target="_blank" class="button">Play WebGL Game</a>
+                </div>
+            </div>                      
 
             <!-- Project 2 -->
             <div class="project-card">
-                <h2>Project 2: Desktop App</h2>
-                <p>A command lign application that allows you to train a home made neural network to play Connect 4. How to test quickly : Create Joueur Joueur, Create Reseau Reseau, Create MonteCarlo MC, Train Reseau MonteCarlo 100, Play Joueur Reseau. This will let you play against a neural network which had 100 games of training against a Monte carlo algorithm</p>
+                <h2>Connect4 with AIs</h2>
+                <p>A command lign application that allows you to train a home made neural network to play Connect 4.</p>
+                <p>How to test quickly : Create Joueur Joueur, Create Reseau Reseau, Create MonteCarlo MC, Train Reseau MonteCarlo 100, Play Joueur Reseau. This will let you play against a neural network which had 100 games of training against a Monte carlo algorithm</p>
                 <p>The neural network can see 1 move in the future which overrides it's decisions, the rest of it's strategy is pure Overfitted non-linear mess</p>
                 <p>The architecture is a simple forward propagation model with a gradient descent</p>
                 <div class="project-link">
