SKAR and schmup webGL

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>Current record holds at 34s for the 3 lap race</p>
                 <p>ZQSD to move, Space bar to brake, Shift to use turbo</p>
                 <div class="project-link">
-                    <a href="https://mywebglgame.com" target="_blank" class="button">Play WebGL Game</a>
+                    <a href="https://karleuh.github.io/voiture/" target="_blank" class="button">Play WebGL Game</a>
                 </div>
             </div>
             <!-- Project 1ter -->
@@ -40,7 +40,7 @@
                 <p>A 2D game made with Unity. A SCHMUP where you fly above the adriatic aside clouds that look like dirty tissues, shooting up air pirates</p>
                 <p>ZQSD to move, Space bar to shoot, tab to change weapon type</p>
                 <div class="project-link">
-                    <a href="https://mywebglgame.com" target="_blank" class="button">Play WebGL Game</a>
+                    <a href="https://karleuh.github.io/SCHMUP/" target="_blank" class="button">Play WebGL Game</a>
                 </div>
             </div>                      
 
