--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of a Junior Developer showcasing projects with WebGL builds and download links.">
-    <title>Karel Jonquais</title>
+    <title>Karel Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Karel Jonquais</h1>
-    </header>
+
 
     <main>
         <section class="projects">
+            <header>
+                <h1>Unity Projects</h1>
+            </header>
             <!-- Project 1 -->
             <div class="project-card">
                 <h2>CrownRush</h2>
@@ -44,6 +44,9 @@
                 </div>
             </div>                      
 
+            <header>
+                <h1>Other Projects</h1>
+            </header>
             <!-- Project 2 -->
             <div class="project-card">
                 <h2>Connect4 with AIs</h2>
