destination Mockup added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,16 @@
                 <div class="project-link">
                     <a href="https://karleuh.github.io/SCHMUP/" target="_blank" class="button">Play WebGL Game</a>
                 </div>
-            </div>                      
+            </div>
+            <!-- Project Card for New Game -->
+            <div class="project-card">
+                <h2>Destination mockup</h2>
+                <p>A visual/basic inputs mockup for a larger project involving 8 persons developped in the context of the gameJam : https://itch.io/jam/unijam2024</p>
+                <p>Left Click to place tracks. Link the two train stations and watch the trains. There is no gameplay</p>
+                <div class="project-link">
+                <a href="https://karleuh.github.io/DestinationMockup/" target="_blank" class="button">Play WebGL Game</a>
+                </div>
+            </div>                   
 
             <header>
                 <h1>Other Projects</h1>
@@ -59,7 +68,11 @@
                 </div>
             </div>
 
-            <!-- Add more projects as needed -->
+
+
+
+
+
         </section>
     </main>
 
