suppression rts moche, ajout protochill

--- a/index.html
+++ b/index.html
@@ -1,81 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karel Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Games</title>
+  <link rel="stylesheet" href="styles.css">
+
+  
+  </style>
 </head>
 <body>
 
-
-    <main>
+  <div class="navbar">
+    <a href="index.html" class="active">Games</a>
+    <a href="package.html">Package</a>
+    <!-- <a href="about.html">About Me</a> -->
+  </div>
+      <main>
         <section class="projects">
             <header>
-                <h1>Unity Projects</h1>
+                <h1>Unity Games</h1>
             </header>
-            <!-- Project 1 -->
-            <div class="project-card">
-                <h2>CrownRush</h2>
-                <p>A 3D game made with Unity. It's a barely playable RTS with a "capture the flag" twist to it.</p>
-                <p>Build your army with the gold you're given (you have to put units on the battlefield and then click the start button), and triumph by bringing the Crown back to the starting zone.</p>
-                <p>Left click to select your troops, right click to command them, space bar to use the signature ability of a selected unit </p>
-                <div class="project-link">
-                    <a href="https://karleuh.github.io/RTSCTFOMG/" target="_blank" class="button">Play WebGL Game</a>
-                </div>
-            </div>
-            <!-- Project 1bis -->
+            <!-- Project 1.1 -->
             <div class="project-card">
                 <h2>Skar</h2>
-                <p>A 3D game made with Unity. Drive around and try to beat your own time in this unfinished car/driving game</p>
+                <p>A 3D game made with Unity. Drive around and try to beat your own time in this car/driving game</p>
                 <p>Current record holds at 34s for the 3 lap race</p>
-                <p>ZQSD to move, Space bar to brake, Shift to use turbo</p>
+                <p>ZQSD to move, Space bar to brake, Left Shift to use turbo, Esc for menu</p>
                 <div class="project-link">
                     <a href="https://karleuh.github.io/voiture/" target="_blank" class="button">Play WebGL Game</a>
                 </div>
             </div>
-            <!-- Project 1ter -->
+            <!-- Project 1.2 -->
             <div class="project-card">
                 <h2>SCHMUP</h2>
-                <p>A 2D game made with Unity. A SCHMUP where you fly above the adriatic aside clouds that look like dirty tissues, shooting up air pirates</p>
+                <p>A 2D game made with Unity. A SCHMUP where you fly above the adriatic, shooting up air pirates</p>
                 <p>ZQSD to move, Space bar to shoot, tab to change weapon type</p>
                 <div class="project-link">
                     <a href="https://karleuh.github.io/SCHMUP/" target="_blank" class="button">Play WebGL Game</a>
                 </div>
             </div>
-            <!-- Project Card for New Game -->
+            <!-- Project 1.3 -->
             <div class="project-card">
                 <h2>Destination mockup</h2>
-                <p>A visual/basic inputs mockup for a larger project involving 8 persons developped in the context of the gameJam : https://itch.io/jam/unijam2024</p>
-                <p>Left Click to place tracks. Link the two train stations and watch the trains. There is no gameplay</p>
+                <p>A visual/basic inputs mockup for a larger project developped in the context of the gameJam : https://itch.io/jam/unijam2024</p>
+                <p>Left Click to place tracks. Link the two train stations and watch the trains.</p>
                 <div class="project-link">
                 <a href="https://karleuh.github.io/DestinationMockup/" target="_blank" class="button">Play WebGL Game</a>
                 </div>
             </div>                   
-
-            <header>
-                <h1>Other Projects</h1>
-            </header>
-            <!-- Project 2 -->
-            <div class="project-card">
-                <h2>Connect4 with AIs</h2>
-                <p>A command lign application that allows you to train a home made neural network to play Connect 4.</p>
-                <p>How to test quickly : Create Joueur Joueur, Create Reseau Reseau, Create MonteCarlo MC, Train Reseau MonteCarlo 100, Play Joueur Reseau. This will let you play against a neural network which had 100 games of training against a Monte carlo algorithm</p>
-                <p>The neural network can see 1 move in the future which overrides it's decisions, the rest of it's strategy is pure Overfitted non-linear mess</p>
-                <p>The architecture is a simple forward propagation model with a gradient descent</p>
-                <div class="project-link">
-                    <a href="https://github.com/ugo-hubertalm/Projet-INFO/releases/download/C4/main.exe" target="_blank" class="button">Download App</a>
-                </div>
-            </div>
-
-
-
-
-
-
         </section>
     </main>
-
     <footer>
         <a href="https://github.com/Karleuh" target="_blank">Visit my GitHub</a>
     </footer>
