casse folder images

--- a/package.html
+++ b/package.html
@@ -41,11 +41,11 @@
         <p>Here is an exemple of the integration of the package in an existing game, the SCHMUP you can find on the first page.</p>
         <p>A Regex reads into the scripts to decifer the classes and the package creates the UML to make the code base interactible using the chatbox and the graph.</p>
 
-        <img src="images/ProtochillSample.png" alt="Existing project integration"/>
+        <img src="Images/ProtochillSample.png" alt="Existing project integration"/>
         <p></p>
         <p>Here is an exemple of the use of the package to build a new project from scratch, utilizing the chatbox, UML and levelDesign features to build a game quickly.</p>
 
-        <img src="images/ProtochillSample2.png" alt="Prototype"/>
+        <img src="Images/ProtochillSample2.png" alt="Prototype"/>
       </div>
     </section>
   </main>
