--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
             </header>
             <!-- Project 1.1 -->
             <div class="project-card">
+                <h2>"Automate Messager" mockup</h2>
+                <p>A visual mockup for my current project, not yet compatible with web builds.</p>
+                <p>Runs at a relatively impressive framerate of 200 in editor mode, 350 in build (considering the 3 millions triangles, custom lighting, alpha, not yet baked procedural textures and terrain details)</p>
+                <p>Works using Shader graphs, GPU instancing, hashed noises and various custom hlsl files</p>
+                <div class="project-link">
+                <video width="800" controls autoplay muted loop>
+                <source src="Videos/Movie_001.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+                </video>
+                </div>
+            </div>
+            <!-- Project 1.2 -->
+            <div class="project-card">
                 <h2>Skar</h2>
                 <p>A 3D game made with Unity. Drive around and try to beat your own time in this car/driving game</p>
                 <p>Current record holds at 34s for the 3 lap race</p>
@@ -31,7 +44,7 @@
                     <a href="https://karleuh.github.io/voiture/" target="_blank" class="button">Play WebGL Game</a>
                 </div>
             </div>
-            <!-- Project 1.2 -->
+            <!-- Project 1.3 -->
             <div class="project-card">
                 <h2>SCHMUP</h2>
                 <p>A 2D game made with Unity. A SCHMUP where you fly above the adriatic, shooting up air pirates</p>
@@ -40,7 +53,7 @@
                     <a href="https://karleuh.github.io/SCHMUP/" target="_blank" class="button">Play WebGL Game</a>
                 </div>
             </div>
-            <!-- Project 1.3 -->
+            <!-- Project 1.4 -->
             <div class="project-card">
                 <h2>Destination mockup</h2>
                 <p>A visual/basic inputs mockup for a larger project developped in the context of the gameJam : https://itch.io/jam/unijam2024</p>
@@ -48,7 +61,8 @@
                 <div class="project-link">
                 <a href="https://karleuh.github.io/DestinationMockup/" target="_blank" class="button">Play WebGL Game</a>
                 </div>
-            </div>                   
+            </div>
+            
         </section>
     </main>
     <footer>
