added about me page and updated messager video

--- a/package.html
+++ b/package.html
@@ -13,6 +13,8 @@
   <div class="navbar">
     <a href="index.html">Games</a>
     <a href="package.html" class="active">Package</a>
+    <a href="about.html">About me</a>
+
     <!-- <a href="about.html" >About Me</a> -->
   </div>
   <main>
