--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Me</title>
+  <title>About me</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,13 +11,14 @@
   <div class="navbar">
     <a href="index.html">Games</a>
     <a href="package.html">Package</a>
-    <a href="about.html" class="active">About Me</a>
+    <a href="about.html" class="active">About me</a>
   </div>
 
   <div class="content">
     <h1>About Me</h1>
-    <p>This is the About Me page.</p>
+    <p>A sneak peek into some of the works that populate my imagination</p>
+    <img src="Images/GamesILike.png" alt="games I like"/>
+    <img src="Images/BooksILike.png" alt="books I like"/>
   </div>
 </body>
 </html>
-
