--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class="navbar">
     <a href="index.html" class="active">Games</a>
     <a href="package.html">Package</a>
+    <a href="about.html">About me</a>
     <!-- <a href="about.html">About Me</a> -->
   </div>
       <main>
@@ -26,7 +27,7 @@
                 <h2>"Automate Messager" mockup</h2>
                 <p>A visual mockup for my current project, not yet compatible with web builds.</p>
                 <p>Runs at a relatively impressive framerate of 200 in editor mode, 350 in build (considering the 3 millions triangles, custom lighting, alpha, not yet baked procedural textures and terrain details)</p>
-                <p>Works using Shader graphs, GPU instancing, hashed noises and various custom hlsl files</p>
+                <p>Works using Shader graphs, GPU instancing, hashed noises and various custom hlsl files.</p>
                 <div class="project-link">
                 <video width="800" controls autoplay muted loop>
                 <source src="Videos/Movie_001.mp4" type="video/mp4">
