container vidéo et paddings (fix mobile)

--- a/about.html
+++ b/about.html
@@ -13,12 +13,13 @@
     <a href="package.html">Package</a>
     <a href="about.html" class="active">About me</a>
   </div>
-
-  <div class="content">
-    <h1>About Me</h1>
-    <p>A sneak peek into some of the works that populate my imagination</p>
-    <img src="Images/GamesILike.png" alt="games I like"/>
-    <img src="Images/BooksILike.png" alt="books I like"/>
-  </div>
+  <main>
+    <div class="content">
+      <h1>About Me</h1>
+      <p>A sneak peek into some of the works that populate my imagination</p>
+      <img src="Images/GamesILike.png" alt="games I like"/>
+      <img src="Images/BooksILike.png" alt="books I like"/>
+    </div>
+  </main>
 </body>
 </html>
