Corrections texte et uniformisation headers

--- a/about.html
+++ b/about.html
@@ -14,8 +14,10 @@
     <a href="about.html" class="active">About me</a>
   </div>
   <main>
+    <header>
+    <h1>About Me</h1>
+    </header>
     <div class="content">
-      <h1>About Me</h1>
       <p>A sneak peek into some of the works that populate my imagination</p>
       <img src="Images/GamesILike.png" alt="games I like"/>
       <img src="Images/BooksILike.png" alt="books I like"/>
