--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Games</title>
   <link rel="stylesheet" href="styles.css">
-
-  
-  </style>
 </head>
 <body>
 
@@ -26,7 +23,7 @@
             <div class="project-card">
                 <h2>"Automate Messager" mockup</h2>
                 <p>A visual mockup for my current project, not yet compatible with web builds.</p>
-                <p>Runs at a relatively impressive framerate of 200 in editor mode, 350 in build (considering the 3 millions triangles, custom lighting, alpha, not yet baked procedural textures and terrain details)</p>
+                <p>Runs at a relatively impressive frame rate of 200 in editor mode, 350 in build (considering the 3 million triangles, custom lighting, alpha, not yet baked procedural textures and terrain details)</p>
                 <p>Works using Shader graphs, GPU instancing, hashed noises and various custom hlsl files.</p>
                 <div class="video-container">
                     <video controls autoplay muted loop>
@@ -48,8 +45,8 @@
             <!-- Project 1.3 -->
             <div class="project-card">
                 <h2>SCHMUP</h2>
-                <p>A 2D game made with Unity. A SCHMUP where you fly above the adriatic, shooting up air pirates</p>
-                <p>ZQSD to move, Space bar to shoot, tab to change weapon type</p>
+                <p>A 2D game made with Unity. A SCHMUP where you fly above the adriatic, blasting air pirates</p>
+                <p>ZQSD to move, Spacebar to shoot, tab to switch weapon type</p>
                 <div class="project-link">
                     <a href="https://karleuh.github.io/SCHMUP/" target="_blank" class="button">Play WebGL Game</a>
                 </div>
@@ -57,8 +54,8 @@
             <!-- Project 1.4 -->
             <div class="project-card">
                 <h2>Destination mockup</h2>
-                <p>A visual/basic inputs mockup for a larger project developped in the context of the gameJam : https://itch.io/jam/unijam2024</p>
-                <p>Left Click to place tracks. Link the two train stations and watch the trains.</p>
+                <p>A visual and basic inputs mockup for a larger project developed in the context of the gameJam : https://itch.io/jam/unijam2024</p>
+                <p>Left Click to place tracks. Link the two train stations and watch the trains go.</p>
                 <div class="project-link">
                 <a href="https://karleuh.github.io/DestinationMockup/" target="_blank" class="button">Play WebGL Game</a>
                 </div>
