--- a/package.html
+++ b/package.html
@@ -22,7 +22,6 @@
 
       <header>
         <h1>Unity Package</h1>
-        <p></p>
       </header>
 
 
@@ -30,22 +29,22 @@
         <h2>Protochill</h2>
         <p>A Unity Editor Package which uses LLM technologies to help prototype or develop a game or application.</p>
         <p>The main goal is to overcome the difficulties of human-machine interactions when dealing with vast object oriented structures.</p>
-        <p>The commonly used chatbox is often not sufficient, so the package additionnaly showcases a UML graphical interface and makes sure the correct class context is given to the LLM at each step</p>
+        <p>The commonly used chatbox is often not sufficient, so the package additionaly showcases a UML graphical interface and makes sure the correct class context is given to the LLM at each step</p>
         <p>I initiated the idea for this project, and with the support of my school and fellow students, I successfully led a small team of two other developers to bring it to completion.</p>
-        <p>The biggest issue came with Unity's life cycle : when the package writes files the Editor needs to recompile, which effectively destroys all objects, making consistency a challenge for both package developpers and users</p>
-        <p>This issue was solved by using a cache file and a solid architecture that auto saves/updates itself in the cache file</p>
+        <p>The biggest issue came with Unity's life cycle : when the package writes files the Editor needs to recompile, which effectively destroys all objects, making consistency a challenge for both package developers and users</p>
+        <p>This issue was solved by using a cache file and a robust architecture that auto-saves and restores state</p>
         <div class="project-link">
           <a href="https://github.com/jouliet/UnityProtoChill" target="_blank" class="button">Protochill github</a>
         </div>
       </div>
       <div class="content">
         <p></p>
-        <p>Here is an exemple of the integration of the package in an existing game, the SCHMUP you can find on the first page.</p>
-        <p>A Regex reads into the scripts to decifer the classes and the package creates the UML to make the code base interactible using the chatbox and the graph.</p>
+        <p>Here is an example of the integration of the package in an existing game, the SCHMUP you can find on the first page.</p>
+        <p>A Regex reads through the scripts to decipher the classes and the package creates the UML to make the code base interactable using the chatbox and the graph.</p>
 
         <img src="Images/ProtochillSample.png" alt="Existing project integration"/>
         <p></p>
-        <p>Here is an exemple of the use of the package to build a new project from scratch, utilizing the chatbox, UML and levelDesign features to build a game quickly.</p>
+        <p>Here is an example of the use of the package to build a new project from scratch, utilizing the chatbox, UML and level design features to rapidly prototype a game.</p>
 
         <img src="Images/ProtochillSample2.png" alt="Prototype"/>
       </div>
